--- a/style.css
+++ b/style.css
@@ -4,14 +4,18 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #121212;
+}
+
 .container {
     display: grid;
     grid-template-rows: 100px 1fr;
     width: 30vw;
     height: 80vh;
     padding: 1rem;
-    background-color: grey;
-    border: 1px solid black;
+    background-color: #1e1e1e;
+    border: 1px solid silver;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -21,7 +25,7 @@
 h2 {
     margin-top: 0;
     margin-bottom: .2rem;
-    color: black;
+    color: white;
 }
 
 #display {
@@ -51,17 +55,25 @@ button {
 
 #equal-btn {
     grid-row: span 2;
-    background-color: orange;
+    background-color: #ff9500;
 }
 
-#clear-btn {
-    background-color: crimson;
+#equal-btn:hover {
+    background-color: #e08500;
 }
 
-#delete-btn {
-    background-color: crimson;
+.clear-btn {
+    background-color: #ff3b30;
+}
+
+.clear-btn:hover {
+    background-color: #e0352b;
 }
 
 .operator-btn {
-    background-color: blueviolet;
+    background-color: #007aff;
+}
+
+.operator-btn:hover {
+    background-color: #0069d1;
 }
